--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimary">#0a3732</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#d81b60</color>
-    <color name="bg">#dcdfd7</color>
+    <color name="colorAccent">#e6276e</color>
+    <color name="bg">#435a1d</color>
+    <color name="btn">#045012</color>
 </resources>
