--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -58,6 +58,7 @@
         android:text="@string/address"
         android:textColor="@color/colorAccent"
         android:textSize="@dimen/size16"
+        android:fontFamily="@font/ralewayblack"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.584"
