--- a/app/src/main/res/layout/activity_four.xml
+++ b/app/src/main/res/layout/activity_four.xml
@@ -62,7 +62,7 @@
         app:srcCompat="@drawable/imgback" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/textname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/textname"
@@ -72,7 +72,7 @@
         tools:layout_editor_absoluteY="108dp" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/textpass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/textpass"
@@ -82,7 +82,7 @@
         tools:layout_editor_absoluteY="170dp" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/textphone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/textphone"
